Fixed text alignment padding issue

--- a/tile-layout-library/style.css
+++ b/tile-layout-library/style.css
@@ -36,7 +36,7 @@
     -webkit-animation-timing-function: ease-out; }
   .tile-text {
     position: absolute;
-    width: 90%;
+    width: 100%;
     padding: 2% 5% 0 5%;
     z-index: 0;
     background: -moz-linear-gradient(top, transparent 0%, black 100%);
